Correct invisible swirly arrow in light mode

--- a/app/pages/HomePage.module.css
+++ b/app/pages/HomePage.module.css
@@ -14,3 +14,12 @@
     margin-right: 22px;
   }
 }
+
+.notificationsRequiredIndicatorArrow {
+  margin-inline: auto;
+  width: 160px;
+
+  @mixin light {
+    filter: invert(1);
+  }
+}
