--- a/app/pages/UserPage.module.css
+++ b/app/pages/UserPage.module.css
@@ -35,3 +35,12 @@
     margin-right: 22px;
   }
 }
+
+.notificationsRequiredIndicatorArrow {
+  margin-inline: auto;
+  width: 160px;
+
+  @mixin light {
+    filter: invert(1);
+  }
+}
